testsuite/poke.pkl/forget-diag-2.pk
/* { dg-do compile } */

forget 2 + 3, 4; /* { dg-error "expected.*offset" } */
